tests/preproc/define/fail001.ds.out.expected
./preproc/define/fail001.ds:1:1: debug: token
 1 | const a = # ;
   | ^~~~~
./preproc/define/fail001.ds:1:7: debug: id: a
 1 | const a = # ;
   |       ^
./preproc/define/fail001.ds:1:9: debug: token
 1 | const a = # ;
   |         ^
./preproc/define/fail001.ds:1:11: error: unexpected token
 1 | const a = # ;
   |           ^
./preproc/define/fail001.ds:1:13: debug: token
 1 | const a = # ;
   |             ^
./preproc/define/fail001.ds:2:1: debug: token
 2 | ;
   | ^
./preproc/define/fail001.ds:3:1: debug: token
 3 | const b = # unknown
   | ^~~~~
./preproc/define/fail001.ds:3:7: debug: id: b
 3 | const b = # unknown
   |       ^
./preproc/define/fail001.ds:3:9: debug: token
 3 | const b = # unknown
   |         ^
./preproc/define/fail001.ds:3:11: error: unexpected token
 3 | const b = # unknown
   |           ^
./preproc/define/fail001.ds:4:1: debug: token
 4 | ;
   | ^
./preproc/define/fail001.ds:5:1: debug: token
 5 | const c = ##
   | ^~~~~
./preproc/define/fail001.ds:5:7: debug: id: c
 5 | const c = ##
   |       ^
./preproc/define/fail001.ds:5:9: debug: token
 5 | const c = ##
   |         ^
./preproc/define/fail001.ds:5:11: error: unexpected token
 5 | const c = ##
   |           ^~
./preproc/define/fail001.ds:6:1: debug: token
 6 | ;
   | ^
./preproc/define/fail001.ds:7:2: info: 
 7 | #info
   |  ^~~~
./preproc/define/fail001.ds:8:3: info: 
 8 |  #info
   |   ^~~~
./preproc/define/fail001.ds:9:2: error: expected preprocessor directive name
 9 | ##
   |  ^
./preproc/define/fail001.ds:10:1: debug: token
 10 | ;
    | ^
./preproc/define/fail001.ds: info: warnings 0, errors 4
